[tool.poetry]
name = "Prompter"
version = "0.1.0"
description = "A DearPyGui app to generate ChatGPT prompts by compiling source files and problem descriptions."
authors = ["Joe Wandy <jwandy@metabolon.com>"]
license = "MIT"

packages = [
    { include = "prompter" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.40.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"