[tool.poetry]
name = "prompter"
version = "2.18.2"
description = "Prompter for Reasoning Models"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.9.3"
dash-mantine-components = "^0.15.3"
dash-iconify = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
