[tool.poetry]
name = "prompter"
version = "0.1"
description = "Prompter for Reasoning Models"
authors = ["Joe Wandy <jwandy@metabolon.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dash = "^2.18.2"
dash-mantine-components = "^0.15.3"
dash-iconify = "^0.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
